# WDN

./: .gitignore  Readme.md
.run/: WDN.run.xml  api.run.xml  dev.run.xml
api/: Makefile  README.md  env.example  manage.py  pyproject.toml
api/WDN-template/: api.py  asgi.py  settings.py  urls.py  wsgi.py
api/website/: blocks.py  models.py  views.py
api/website/migrations/: 0001_initial.py  0002_homepage_blocks.py
api/website/templates/: base.html
api/website/templates/home/: home_page.html
frontend/: .prettierrc  README.md  app.vue  env.example  nuxt.config.ts  package-lock.json  package.json
frontend/Enums/: blocks.enum.ts
frontend/assets/styles/: breakpoints.scss
frontend/assets/styles/settings/: colors.scss  fonts.scss  global.scss
frontend/components/: Footer.vue  Header.vue
frontend/components/blocks/: Banner.vue
frontend/components/reusable/: Blocks.vue  CTAButton.vue  Social.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/about/: index.vue
frontend/pages/contact/: index.vue
frontend/pages/footer-links/state-grants/: index.vue
frontend/pages/help/: index.vue
frontend/pages/shop/: index.vue
frontend/plugins/: axios.js
